infrastructure/network-policies/np-airflow-prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-prometheus-to-airflow-metrics
  namespace: airflow
spec:
  podSelector:
    matchLabels:
      component: statsd
      release: airflow
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: prometheus-stack
    ports:
    - protocol: TCP
      port: 9102
