infrastructure/network-policies/np-egress-airflow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-airflow-to-data-storage-and-internet
  namespace: airflow
spec:
  podSelector: {} # Alle Pods im Namespace airflow
  policyTypes:
  - Egress
  egress:
  # Zugriff auf Datenbank
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: data-storage
    ports:
    - protocol: TCP
      port: 5432
  # Zugriff auf kube-dns
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
  # Zugriff auf Internet (GitHub)
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - protocol: TCP
      port: 443
