infrastructure/network-policies/np-egress-workflows-mlops.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-data-storage-mlops-from-aw
  namespace: argo-workflows
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: argo-workflows
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: mlops
    ports:
      - protocol: TCP
        port: 5000
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: data-storage
    ports:
    - protocol: TCP
      port: 9000   # MinIO
    - protocol: TCP
      port: 5432   # Postgres
